--- a/chatappjs/src/app.html
+++ b/chatappjs/src/app.html
@@ -11,6 +11,11 @@
 
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+    <style>
+      * {
+        font-family: "Inter", sans-serif;
+      }
+    </style>
     <meta name="viewport" content="width=device-width" />
     %sveltekit.head%
   </head>
